<?xml version="1.0" encoding="UTF-8"?>
<!--
 | AutoRefactor - Eclipse plugin to automatically refactor Java code bases.
 |
 | Copyright (C) 2014-2018 Jean-Noël Rouvignac - initial API and implementation
 |
 | This program is free software: you can redistribute it and/or modify
 | it under the terms of the GNU General Public License as published by
 | the Free Software Foundation, either version 3 of the License, or
 | any later version.
 |
 | This program is distributed in the hope that it will be useful,
 | but WITHOUT ANY WARRANTY; without even the implied warranty of
 | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 | GNU General Public License for more details.
 |
 | You should have received a copy of the GNU General Public License
 | along with this program under LICENSE-GNUGPL.  If not, see
 | <http://www.gnu.org/licenses />.
 |
 |
 | All rights reserved. This program and the accompanying materials
 | are made available under the terms of the Eclipse Public License v1.0
 | which accompanies this distribution under LICENSE-ECLIPSE, and is
 | available at http://www.eclipse.org/legal/epl-v10.html
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

  <groupId>org.autorefactor.plugin</groupId>
	<artifactId>parent</artifactId>
	<version>1.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>feature</module>
		<module>plugin</module>
		<module>plugin.tests</module>
		<module>plugin.ui</module>
		<module>repository</module>
		<module>samples</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<tycho-version>1.4.0</tycho-version>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/JnRouvignac/AutoRefactor.git</connection>
		<developerConnection>scm:git:https://github.com/JnRouvignac/AutoRefactor.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

  <repositories>
		<repository>
			<id>Mars</id>
			<layout>p2</layout>
<!--
      <url>http://download.eclipse.org/eclipse/updates/3.7</url>
      <id>Juno 3.8</id>
      <url>http://download.eclipse.org/eclipse/updates/3.8</url>
      <id>Juno 4.2</id>
      <url>http://download.eclipse.org/eclipse/updates/4.2</url>
      <id>Kepler</id>
      <url>http://download.eclipse.org/eclipse/updates/4.3</url>
      <id>Luna</id>
      <url>http://download.eclipse.org/eclipse/updates/4.4</url>
      <id>Mars</id>
      <url>http://download.eclipse.org/eclipse/updates/4.5</url>
-->
			<url>https://download.eclipse.org/releases/mars</url>
		</repository>
  </repositories>

	<build>
		<plugins>
      <!-- More information for Tycho based builds:
            http://wiki.eclipse.org/Tycho/Reference_Card
            http://wiki.eclipse.org/Tycho/FAQ
            http://wiki.eclipse.org/Tycho/Packaging_Types
            http://wiki.eclipse.org/Tycho/Migration_Howto
            http://wiki.eclipse.org/Category:Tycho
            http://eclipse.org/tycho/documentation.php
            http://www.eclipse.org/tycho/sitedocs/index.html
            http://www.eclipsecon.org/2013/sessions/building-eclipse-plug-ins-and-rcp-applications-tycho
            https://github.com/jeffmaury/eclipsecon2013-tycho
            http://git.eclipse.org/c/tycho/org.eclipse.tycho-demo.git/tree/
      -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
<!-- TODO JNR
Read and apply:
http://www.sebastianbauer.info/index.php?page=tutorials&which=justify
http://www.solutionsiq.com/developing-eclipse-plug-ins-program-to-publish/
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <testSuite>Bundle-SymbolicName-of-bundleContaining-Tests</testSuite>
          <testClass>FullyQualifiedNameOfTheTestClass</testClass>
          <parallel>classes|methods|both</parallel>
        </configuration>
      </plugin>
-->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerId>jdt</compilerId>
					<!--
					<compilerArgument>-err:nullAnnot,null</compilerArgument> <!- insert your warn/err configuration here ->
					<compilerArguments>
					<properties>${project.basedir}/.settings/org.eclipse.jdt.core.prefs</properties>
					</compilerArguments>
					-->
				</configuration>
				<dependencies>
				<!-- This dependency provides the implementation of compiler "jdt": -->
					<dependency>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-compiler-jdt</artifactId>
						<version>${tycho-version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<!-- Set the new version with:
			mvn org.eclipse.tycho:tycho-versions-plugin:set-version -DnewVersion=1.0
			And tag with:
			git tag -a v1.0 -m "My message"
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<preparationGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:1.9.5:add org.apache.maven.plugins:maven-scm-plugin:1.9.5:checkin</preparationGoals>
					<completionGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:1.9.5:add org.apache.maven.plugins:maven-scm-plugin:1.9.5:checkin</completionGoals>
				</configuration>
			    <dependencies>
			        <dependency>
			            <groupId>org.apache.maven.plugins</groupId>
			            <artifactId>maven-scm-plugin</artifactId>
			            <version>1.10.0</version>
			        </dependency>
			    </dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.10.0</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<goals>
							<goal>add</goal>
							<goal>checkin</goal>
						</goals>
						<configuration>
							<includes>**/META-INF/MANIFEST.MF,**/feature.xml,**/*.product,**/category.xml</includes>
							<excludes>**/target/**</excludes>
							<message>Changing the Eclipse files versions</message>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4.1</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>(,3.7.0)</version>
									<message>Maven 3.7.0 has a bug resolving P2 repositories.</message>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>[1.5.0,1.8.1)</version>
									<message>Cannot build on JDK higher than 8 due to tests failing on more recent JDK.</message>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>checkstyle</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<version>2.12.1</version>
						<executions>
							<execution>
								<id>validate</id>
								<phase>validate</phase>
								<configuration>
									<configLocation>checkstyle.xml</configLocation>
									<encoding>UTF-8</encoding>
									<consoleOutput>true</consoleOutput>
									<failsOnError>true</failsOnError>
									<linkXRef>false</linkXRef>
								</configuration>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
</project>
